# cpp-websocket-backend

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt  radiopi.service
cmake/: FindLIBVLC.cmake
src/: CMakeLists.txt  main.cc  player.cc  player.hpp
